DX/dev/force-app/main/default/objects/Child__c/Child__c.object-meta.xml
<CustomObject>
    <label>子</label>
    <nameField>
        <label>子名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>