DX/dev/force-app/main/default/objects/Child__c/fields/Confirm__c.field-meta.xml
<CustomField>
    <fullName>Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>確定</label>
    <type>Checkbox</type>
</CustomField>