DX/dev/force-app/main/default/objects/Child__c/fields/ConfirmLock__c.field-meta.xml
<CustomField>
    <fullName>ConfirmLock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>確定ロック</label>
    <type>Checkbox</type>
</CustomField>