DX/dev/force-app/main/default/objects/Child__c/fields/Integer__c.field-meta.xml
<CustomField>
    <fullName>Integer__c</fullName>
    <label>数値</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>