DX/dev/force-app/main/default/objects/Child__c/fields/ParentName__c.field-meta.xml
<CustomField>
    <fullName>ParentName__c</fullName>
    <formula>Parent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>親の名前</label>
    <type>Text</type>
</CustomField>