DX/dev/force-app/main/default/objects/Child__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_350
  ,FIND(&quot;/services/Soap/&quot;, $Api.Partner_Server_URL_350)) + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>