DX/dev/force-app/main/default/objects/Child__c/validationRules/ConfirmLock.validationRule-meta.xml
<ValidationRule>
    <fullName>ConfirmLock</fullName>
    <active>true</active>
    <errorConditionFormula>IF(PRIORVALUE(Confirm__c) , 
    IF(Confirm__c = FALSE,
        ConfirmLock__c,
        FALSE),
    FALSE)</errorConditionFormula>
    <errorMessage>だめです</errorMessage>
</ValidationRule>