DX/dev/force-app/main/default/objects/Child__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Confirm__c</columns>
    <columns>ConfirmLock__c</columns>
    <columns>Parent__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>